--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,14 +6,27 @@
         <th>Opinion</th>
         <th colspan="3"></th>
     </thead>
-    <% @books_all.each do |book| %>
+    <% @books.each do |book| %>
     <tbody>
        <td><%= image_tag book.user.get_profile_image(100,100) %></td>
-       <td> <%= book.title %> </td>
+       <td>
+           <%= link_to book_path(book.id) do %>
+            <%= book.title %> 
+            <% end %>
+        </td>
        <td><%= book.body %></td>
        <th colspan="3"></th>
     <% end %>
     </tbody>
 </table>
 
-
+<div>
+  <h1>New book</h1>
+  <%= form_with model: @book do |f| %>
+    <h4>Title</h4>
+      <%= f.text_field :title %>
+    <h4>Opinion</h4>
+      <%= f.text_area :body %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
+</div>
