--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,14 +1,13 @@
-<div>
   <h1>User info</h1>
-  <%= image_tag user.get_profile_image(100,100) %>
+  <%= image_tag current_user.get_profile_image(100,100) %>
   <h4>name</h4>
-  <%= user.name %>
+  <%= current_user.name %>
   <h4>introduction</h4>
-  <%= user.introduction %>
+  <%= current_user.introduction %>
 </div>
 
 <div>
-  <%= link_to "profile edit", edit_user_path(user) %>
+  <%= link_to "profile edit", edit_user_path(current_user) %>
 </div>
 
 <div>
