--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,10 +8,14 @@
     </thead>
     <% @books.each do |book| %>
     <tbody>
-       <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+       <td>
+          <%= link_to user_path(book.user.id) do %>
+           <%= image_tag book.user.get_profile_image(100,100) %>
+           <% end %>
+       </td>
        <td>
            <%= link_to book_path(book.id) do %>
-            <%= book.title %> 
+            <%= book.title %>
             <% end %>
         </td>
        <td><%= book.body %></td>
@@ -21,12 +25,5 @@
 </table>
 
 <div>
-  <h1>New book</h1>
-  <%= form_with model: @book do |f| %>
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
+<%= render 'books/list', book: @book_new %>
 </div>
