--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,27 @@
-<%
+<h1>Books</h1>
+<table>
+    <thead>
+      　<th colspan="3"></th>
+        <th>image</th>
+        <th>name</th>
+        <th></th>
+    </thead>
+     <% @users.each do |user| %>
+    <tbody>
+      <td colspan="3"></td>
+       <td>
+           <%= image_tag user.get_profile_image(100,100) %>
+       </td>
+       <td>
+          <%= user.name %>
+        </td>
+        <td>
+       <%=link_to "Show", user_path(user.id) %>
+       </td>
+    <% end %>
+    </tbody>
+</table>
+
+<div>
+<%= render 'books/list', book: @book_new %>
+</div>
