--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,29 @@
-<%= render 'books/list', user: @user, book: @book %>
+<h1>Books</h1>
+<table>
+    <thead>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+    </thead>
+    <% @books.each do |book| %>
+    <tbody>
+       <td>
+          <%= link_to user_path(@user.id) do %>
+           <%= image_tag book.user.get_profile_image(100,100) %>
+           <% end %>
+       </td>
+       <td>
+           <%= link_to book_path(book.id) do %>
+            <%= book.title %>
+            <% end %>
+        </td>
+       <td><%= book.body %></td>
+       <td colspan="3"></td>
+     <% end %>
+    </tbody>
+</table>
+
+<div>
+<%= render 'books/list', book: @book_new %>
+</div>
