--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,16 @@
 <h4>Editing Book</h4>
+<div>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+</div>
+
+<div>
 <%= form_with model: @book do |f| %>
 <label for="inputtitle">Title</label>
 <%= f.text_field :title %>
@@ -10,3 +22,4 @@
 <%=link_to "Show", book_path(@book.id) %>
 |
 <%=link_to "Back", books_path %>
+</div>
