--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,7 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h2>welcome to Bookers !!</h1>
+<h4>n Bookers,</h4>
+<p>you can share and exchange your opinions , inpressions , and emotions</p>
+<p>about various books!</p>
+<diV> <%= link_to "Log in", new_user_session_path %></diV>
+<diV><%= link_to "Sign Up", new_user_registration_path %></diV>
+ 
