--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,35 +11,65 @@
   </head>
 
   <body>
-    <heder>
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand " href="/">Bookers</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+           <ul class="navbar-nav ml-auto">
       <% if user_signed_in? %>
-        <li>
+        <li class="nav-item">
+          <i class="fas fa-home"></i>
           <%= link_to "Home", user_path(current_user.id) %>
         </li>
-        <LI>
+        <LI class="nav-item">
+          <i class="fas fa-users"></i>
           <%= link_to "Users", users_path %>
         </LI>
-        <li>
+        <li class="nav-item">
+          <i class="fas fa-book-open"></i>
           <%= link_to "Books", books_path %>
         </li>
-        <li>
+        <li class="nav-item">
+          <i class="fas fa-sign-out-alt"></i>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
-        <li>
+        <li class="nav-item">
+          <i class="fas fa-home"></i>
           <%= link_to "Home", root_path %>
         </li>
-        <li>
+        <li class="nav-item">
+          <i class="fas fa-link"></i>
           <%= link_to "About", about_path %>
         </li>
-        <li>
+        <li class="nav-item">
+          <i class="fas fa-user-plus"></i>
           <%= link_to "Sign Up", new_user_registration_path %>
         </li>
-        <li>
+        <li class="nav-item">
+          <i class="fas fa-sign-in-alt"></i>
           <%= link_to "Log in", new_user_session_path %>
         </li>
         <% end %>
-    </heder>
+        </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+    <main class="mb-auto">
+    <%= yield %>
+    </main>
+
+       <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+  　<% end %>
     <%= yield %>
 
     <footer>
@@ -51,6 +81,5 @@
         </div>
       </div>
     </footer>
-
   </body>
-</html>
+</html> 
