--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,14 @@
 <h2>User info</h2>
+<div>
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+</div>
 
 <%= form_with model: @user do |f| %>
 <label for="inputName">Name</label>
@@ -9,4 +19,3 @@
 <%= f.text_area :introduction %>
 <%= f.submit "Update User" %>
 <% end %>
-
