--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,28 +3,24 @@
      <div class="col-md-4">
         <%= render 'books/list', book: @book_new, user: @user%>
      </div>
-        <h1>Book detail</h1>
         <div class="col-md-8">
-　　　　　<table class="book_show">
-    　　　　　　<thead>
-        　　　　　<th></th>
-        　　　　　<th>Title</th>
-        　　　　　<th>Opinion</th>
-        　　　　　<th colspan="3"></th>
-    　　　　　</thead>
+          <h2>Book detail</h2>
+　　　　　<table class="table">
     　　　　　<tbody>
-      　　　　　　　<td><%= image_tag @books.user.get_profile_image(100,100) %>
+    　　　　　  <tr>
+    　　　　　    <td>
+    　　　　　 　　　<%= link_to user_path(@books.user.id) do %>
+      　　      <%= image_tag @books.user.get_profile_image(100,100) %>
       　　　　　　　<br>
-      　　　　　　　<%= link_to user_path(@books.user.id) do %>
-      　　　　　　　<%= @books.user.name %>
+      　　　　　　　<%= @books.user.name %>  
       　　　　　　　<% end %>
-      　　　　　</td>
+      　　　　　　</td>
       　　　　　　　<td>
        　　　　　　<%= link_to book_path(@books.id) do %>
        　　　　　　<%= @books.title %>
        　　　　　　<% end %>
       　　　　　　　</td>
-      　　　　　　　<td><%= @books.body %></td>
+      　　　　　　<td><%= @books.body %></td>
       　　　　　　　<th colspan="3"></th>
       　　　　　　　<% if @books.user == current_user %>
       　　　　　　　<td><%= link_to "Edit", edit_book_path(@books.id) %></td>
@@ -35,6 +31,3 @@
 　　　</div>
 　　</div>
 　</div>
-　
-<div>
-</div>
