--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,36 +22,36 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
            <ul class="navbar-nav ml-auto">
       <% if user_signed_in? %>
-        <li class="nav-item">
-          <i class="fas fa-home"></i>
+        <li class="nav-item p-3"> 
+          <i class="fas fa-home"></i> 
           <%= link_to "Home", user_path(current_user.id) %>
         </li>
-        <LI class="nav-item">
+        <LI class="nav-item p-3">
           <i class="fas fa-users"></i>
           <%= link_to "Users", users_path %>
         </LI>
-        <li class="nav-item">
+        <li class="nav-item p-3">
           <i class="fas fa-book-open"></i>
           <%= link_to "Books", books_path %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item p-3">
           <i class="fas fa-sign-out-alt"></i>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
-        <li class="nav-item">
+        <li class="nav-item p-3">
           <i class="fas fa-home"></i>
           <%= link_to "Home", root_path %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item p-3">
           <i class="fas fa-link"></i>
           <%= link_to "About", about_path %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item p-3">
           <i class="fas fa-user-plus"></i>
           <%= link_to "Sign Up", new_user_registration_path %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item p-3">
           <i class="fas fa-sign-in-alt"></i>
           <%= link_to "Log in", new_user_session_path %>
         </li>
@@ -62,10 +62,6 @@
     </div>
   </nav>
 </header>
-
-    <main class="mb-auto">
-    <%= yield %>
-    </main>
 
        <% flash.each do |key, value| %>
     <%= content_tag(:div, value, class: "#{key}") %>
