--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,3 @@
-<h4>Editing Book</h4>
 <div>
 <% if @book.errors.any? %>
   <%= @book.errors.count %>件のエラーが発生しました
@@ -9,17 +8,27 @@
   </ul>
 <% end %>
 </div>
-
-<div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
 <%= form_with model: @book do |f| %>
+<div class="form-group">
 <label for="inputtitle">Title</label>
 <%= f.text_field :title %>
+</div>
+<div class="form-group">
 <label for="inputbody">Opinion</label>
 <%= f.text_area :body %>
-<%= f.submit "Update Book" %>
+</div>
+<div class="form-group">
+<input type="submit" name="commit" value="Update Book" class="btn btn-success" data-disable-with="Update Book">
+</div>
 <% end %>
 
 <%=link_to "Show", book_path(@book.id) %>
 |
 <%=link_to "Back", books_path %>
+</div>
+</div>
 </div>
