--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,16 @@
-<h2>welcome to Bookers !!</h1>
-<h4>n Bookers,</h4>
-<p>you can share and exchange your opinions , inpressions , and emotions</p>
-<p>about various books!</p>
-<diV> <%= link_to "Log in", new_user_session_path %></diV>
-<diV><%= link_to "Sign Up", new_user_registration_path %></diV>
- 
+<div class="container">
+ <div class="row">
+  <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+   <h2>welcome to<i class="fas fa-book"></i> Bookers !!</h2>
+   <h4>in Bookers,</h4>
+   <p>you can share and exchange your opinions , inpressions , and emotions</p>
+   <p>about various books!</p>
+
+   <div class="btn btn-info btn-sm btn-block mb-3" >
+    <%= link_to "Log in", new_user_session_path %>
+   </diV>
+   <div class="btn btn-success btn-sm btn-block"> 
+    <div><%= link_to "Sign up", new_user_registration_path %><div>
+    </diV>
+   </diV>
+  </diV> 
