--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,20 @@
   </head>
 
   <body>
-    <header class="shadow-sm">
-      <nav class="navbar navbar-expand-lg navbar-light">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand " href="/">Bookers</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <div class="navbar-collapse collapse show" id="navbarNavDropdown">
            <ul class="navbar-nav ml-auto">
       <% if user_signed_in? %>
-        <li class="nav-item p-3"> 
-          <i class="fas fa-home"></i> 
-          <%= link_to "Home", user_path(current_user.id) %>
+        <li class="nav-item p-3">
+          <i class="fas fa-home"></i>
+          <%= link_to "Home", user_path(current_user.id), class:'nav-link text-light' %>
         </li>
         <LI class="nav-item p-3">
           <i class="fas fa-users"></i>
@@ -49,7 +49,7 @@
         </li>
         <li class="nav-item p-3">
           <i class="fas fa-user-plus"></i>
-          <%= link_to "Sign Up", new_user_registration_path %>
+          <%= link_to "Sign up", new_user_registration_path %>
         </li>
         <li class="nav-item p-3">
           <i class="fas fa-sign-in-alt"></i>
@@ -66,6 +66,7 @@
        <% flash.each do |key, value| %>
     <%= content_tag(:div, value, class: "#{key}") %>
   　<% end %>
+
     <%= yield %>
 
     <footer>
@@ -78,4 +79,4 @@
       </div>
     </footer>
   </body>
-</html> 
+</html>
