--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,3 @@
-<h2>User info</h2>
 <div>
 <% if @user.errors.any? %>
   <%= @user.errors.count %>件のエラーが発生しました
@@ -9,13 +8,27 @@
   </ul>
 <% end %>
 </div>
-
-<%= form_with model: @user do |f| %>
-<label for="inputName">Name</label>
-<%= f.text_field :name %>
-<label for="inputImage">Image</label>
-<%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-<label for="inputIntroduction">Introduction</label>
-<%= f.text_area :introduction %>
-<%= f.submit "Update User" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+     <h2>User info</h2>
+     <%= form_with model: @user do |f| %>
+     <div class="form-group">
+       <label for="inputName">Name</label>
+        <div><%= f.text_field :name %></div>
+      </div>
+      <div class="form-group">
+      <label for="inputImage">Image</label>
+       <div><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %><div>
+       </div>
+       <div class="form-group">
+       <label for="inputIntroduction">Introduction</label>
+       <div><%= f.text_area :introduction %><div>
+      </div>
+      <div class="form-group">
+      <div><%= f.submit "Update User" %><div>
+      <% end %>
+      </div>
+     </div>
+    </div>
+   </div>
