--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,32 @@
-<h1>Books</h1>
-<table>
-    <thead>
-      　<th colspan="3"></th>
-        <th>image</th>
-        <th>name</th>
-        <th></th>
-    </thead>
-     <% @users.each do |user| %>
-    <tbody>
-      <td colspan="3"></td>
-       <td>
-           <%= image_tag user.get_profile_image(100,100) %>
-       </td>
-       <td>
-          <%= user.name %>
-        </td>
-        <td>
-       <%=link_to "Show", user_path(user.id) %>
-       </td>
-    <% end %>
-    </tbody>
-</table>
+<div class="container">
+ <div class="row">
+  <div class="col-md-3">
+    <%= render 'books/list', book: @book_new, user: @user%>
+   </div>
 
-<div>
-<%= render 'books/list', book: @book_new, user: @user%>
+   <div class="col-md-8">
+    <h2>Books</h2>
+     <table class="table">
+      <thead>
+       <th colspan="3"></th>
+       <th>image</th>
+       <th>name</th>
+      </thead>
+      <% @users.each do |user| %>
+      <tbody>
+       <td colspan="3"></td>
+       <td>
+        <%= image_tag user.get_profile_image(100,100) %>
+       </td>
+       <td>
+        <%= user.name %>
+       </td>
+       <td>
+        <%=link_to "Show", user_path(user.id) %>
+       </td>
+       <% end %>
+      </tbody>
+     </table>
+    </div>
+   </div>
 </div>
