--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,34 @@
-<h1>Books</h1>
-<table>
-    <thead>
-        <th></th>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-    </thead>
-    <% @books.each do |book| %>
-    <tbody>
-       <td>
-          <%= link_to user_path(@user.id) do %>
-           <%= image_tag book.user.get_profile_image(100,100) %>
-           <% end %>
-       </td>
-       <td>
-           <%= link_to book_path(book.id) do %>
-            <%= book.title %>
-            <% end %>
-        </td>
-       <td><%= book.body %></td>
-       <td colspan="3"></td>
-     <% end %>
-    </tbody>
-</table>
+<div class="container">
+ <div class="row">
+   <div class="col-md-3">
+     <%= render 'books/list', book: @book_new, user: @user%>
+   </div>
 
-<div>
-<%= render 'books/list', book: @book_new, user: @user%>
+  <div class="col-md-8">
+   <h2>Books</h2>
+    <table class="table">
+     <thead>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+      </thead>
+      <% @books.each do |book| %>
+       <tbody>
+        <td>
+         <%= link_to user_path(@user.id) do %>
+          <%= image_tag book.user.get_profile_image(100,100) %>
+         <% end %>
+        </td>
+        <td>
+         <%= link_to book_path(book.id) do %>
+          <%= book.title %>
+         <% end %>
+         </td>
+         <td><%= book.body %></td>
+        <% end %>
+      </tbody>
+     </table>
+   </div>
+  </div>
 </div>
