--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,7 @@
-<h2>welcome to<i class="fas fa-book"></i> Bookers !!</h2>
+<dev class="container" >
+  <div class="row">
+    <h1 class="px-3 mx-auto" >
+      welcome to<i class="fas fa-book"></i> Bookers !!
+    </h1>
+  </div>
+</dev>
