--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -56,6 +56,8 @@
       <%= f.text_field :title %>
     <h4>Opinion</h4>
       <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
+    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
   <% end %>
 </div>
+
+
