--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
 <div>
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>件のerrorが発生しました
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -14,11 +14,11 @@
       <h1>Editing Book</h1>
 <%= form_with model: @book do |f| %>
 <div class="form-group">
-<label for="inputtitle">Title</label>
+<div for="inputtitle">Title</div>
 <%= f.text_field :title %>
 </div>
 <div class="form-group">
-<label for="inputbody">Opinion</label>
+<div for="inputbody">Opinion</div>
 <%= f.text_area :body %>
 </div>
 <div class="form-group">
