--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,13 +1,13 @@
-<div class="container">
+<div class="container px-5 px-sm-0">
  <div class="row">
   <div class="col-md-3">
    <%= render 'books/list', book: @book_new, user: @user%>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-md-8 offset-md-1">
    <h2>Books</h2>
     <% if @book_new.errors.any? %>
-     <%= @book_new.errors.count %>件のエラーが発生しました
+     <%= @book_new.errors.count %>件のeroorが発生しました
      <ul>
        <% @book_new.errors.full_messages.each do |message| %>
         <li><%= message %></li>
