--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
 <div class="col-md-3">
 <%= render 'books/list', book: @book_new, user: @user%>
 </div>
-<div class="col-md-8">
+<div class="col-md-8 offset-md-1">
 <h2>Book detail</h2>
 <table class="table">
 　<tbody>
@@ -23,8 +23,8 @@
 　<td><%= @books.body %></td>
   <th colspan="3"></th>
 　<% if @books.user == current_user %>
-　<td><%= link_to "Edit", edit_book_path(@books.id) %></td>
-　<td><%= link_to "Destroy", book_path(@books), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+　<td><%= link_to "Edit", edit_book_path(@books.id), class:"btn btn-sm btn-success" %></td>
+　<td><%= link_to "Destroy", book_path(@books), method: :delete, "data-confirm" => "本当に削除しますか？", class:"btn btn-sm btn-danger" %></td>
   <% end %>
 　</tbody>
 　</table>
