--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,10 +7,10 @@
    <p>about various books!</p>
 
    <div class="btn btn-info btn-sm btn-block mb-3" >
-    <%= link_to "Log in", new_user_session_path %>
+    <%= link_to "Log in", new_user_session_path, class:'nav-link text-light' %>
    </diV>
    <div class="btn btn-success btn-sm btn-block"> 
-    <div><%= link_to "Sign up", new_user_registration_path %><div>
+    <div><%= link_to "Sign up", new_user_registration_path, class:'nav-link text-light' %><div>
     </diV>
    </diV>
   </diV> 
