--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,46 +14,65 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand " href="/">Bookers</a>
+          <a class="navbar-brand " href="/">
+            <span>Bookers</span>
+            </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="navbar-collapse collapse show" id="navbarNavDropdown">
            <ul class="navbar-nav ml-auto">
-      <% if user_signed_in? %>
-        <li class="nav-item p-3">
-          <i class="fas fa-home"></i>
-          <%= link_to "Home", user_path(current_user.id), class:'nav-link text-light' %>
+
+         <% if user_signed_in? %>
+         <li class="nav-item p-3">
+            <%= link_to user_path(current_user.id), class:'nav-link text-light' do %>
+            <i class="fas fa-home"></i>home
+            <% end %>
         </li>
-        <LI class="nav-item p-3">
-          <i class="fas fa-users"></i>
-          <%= link_to "Users", users_path %>
-        </LI>
+
         <li class="nav-item p-3">
-          <i class="fas fa-book-open"></i>
-          <%= link_to "Books", books_path %>
+             <%= link_to  users_path, class:'nav-link text-light' do %>
+            <i class="fas fa-users"></i>Users
+           <% end %>
         </li>
+
         <li class="nav-item p-3">
-          <i class="fas fa-sign-out-alt"></i>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+             <%= link_to books_path, class:'nav-link text-light' do %>
+             <i class="fas fa-book-open"></i>Books
+           <% end %>
         </li>
+
+        <li class="nav-item p-3">
+          <%= link_to destroy_user_session_path, method: :delete, class:'nav-link text-light' do %>
+          <i class="fas fa-sign-out-alt"></i>Log out
+          <% end %>
+        </li>
+      </div>
+
       <% else %>
         <li class="nav-item p-3">
-          <i class="fas fa-home"></i>
-          <%= link_to "Home", root_path %>
+        <%= link_to root_path, class:'nav-link text-light' do %>
+        <i class="fas fa-home"></i>home
+        <% end %>
         </li>
+
         <li class="nav-item p-3">
-          <i class="fas fa-link"></i>
-          <%= link_to "About", about_path %>
+          <%= link_to about_path, class:'nav-link text-light' do %>
+          <i class="fas fa-link"></i>About
+         <% end %>
         </li>
+
         <li class="nav-item p-3">
-          <i class="fas fa-user-plus"></i>
-          <%= link_to "Sign up", new_user_registration_path %>
+          <%= link_to new_user_registration_path, class:'nav-link text-light' do %>
+          <i class="fas fa-user-plus"></i>Sign up
+          <% end %>
         </li>
+
         <li class="nav-item p-3">
-          <i class="fas fa-sign-in-alt"></i>
-          <%= link_to "Log in", new_user_session_path %>
+          <%= link_to new_user_session_path, class:'nav-link text-light' do %>
+          <i class="fas fa-sign-in-alt"></i>Log in
+          <% end %>
         </li>
         <% end %>
         </li>
