--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="container px-5 px-sm-0">
  <div class="row">
    <div class="col-md-3">
      <%= render 'books/list', book: @book_new, user: @user%>
    </div>
 
-  <div class="col-md-8">
+  <div class="col-md-8 offset-md-1">
    <h2>Books</h2>
     <table class="table">
      <thead>
