--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
          <% if user_signed_in? %>
          <li class="nav-item p-3">
             <%= link_to user_path(current_user.id), class:'nav-link text-light' do %>
-            <i class="fas fa-home"></i>home
+            <i class="fas fa-home"></i>Home
             <% end %>
         </li>
 
@@ -53,7 +53,7 @@
       <% else %>
         <li class="nav-item p-3">
         <%= link_to root_path, class:'nav-link text-light' do %>
-        <i class="fas fa-home"></i>home
+        <i class="fas fa-home"></i>Home
         <% end %>
         </li>
 
