--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-3">
-<%= render 'books/list', book: @book_new, user: @user%>
+<<%= render 'books/list', book: @book_new, user: @user%>
 </div>
 <div class="col-md-8 offset-md-1">
 <h2>Book detail</h2>
